--- a/src/main/webapp/header.html
+++ b/src/main/webapp/header.html
@@ -1,7 +1,5 @@
 <!-- 头部 start --><!---->
-<script src="js/getParameter.js"></script>
-<script src="js/vue.js"></script>
-<script src="js/axios.js"></script>
+
 <script>
 
     var cid = getParameter("cid");
@@ -19,7 +17,7 @@
     }
 
     var vm = new Vue({
-        el: '#header',
+        el: '#top',
         data: {
             cid: cid,
             currentPage: currentPage,
@@ -38,9 +36,9 @@
                     _this.username_login = '请登录'
                 })
             },
-            join(){
-                if (this.username_login==='请登录'){
-                    location.href="login.html"
+            join() {
+                if (this.username_login === '请登录') {
+                    location.href = "login.html"
                 }
             }
         },
@@ -60,42 +58,44 @@
 </script>
 <header id="header">
     <!--数据-->
-    <input type="hidden" v-method="uid_input">
-    <div class="top_banner">
-        <img src="images/top_banner.jpg" alt="">
-    </div>
-    <div class="shortcut">
-        <!-- 未登录状态  -->
-        <div class="login_out">
-            <a href="login.html">登录</a>
-            <a href="register.html">注册</a>
+    <div id="top">
+        <input type="hidden" v-method="uid_input">
+        <div class="top_banner">
+            <img src="images/top_banner.jpg" alt="">
         </div>
-        <!-- 登录状态  -->
-        <div class="login">
+        <div class="shortcut">
+            <!-- 未登录状态  -->
+            <div class="login_out">
+                <a href="login.html">登录</a>
+                <a href="register.html">注册</a>
+            </div>
+            <!-- 登录状态  -->
+            <div class="login">
 
-            <span @click="join">{{username_login}}</span>
-            <a :href="'myfavorite.html?uid='+ uid_input" class="collection">我的收藏</a>
-            <a href="javascript:;" @click="exit">退出</a>
+                <span @click="join">{{username_login}}</span>
+                <a :href="'myfavorite.html?uid='+ uid_input" class="collection">我的收藏</a>
+                <a href="javascript:;" @click="exit">退出</a>
+            </div>
         </div>
-    </div>
-    <div class="header_wrap">
-        <div class="topbar">
-            <div class="logo">
-                <a href="/"><img src="images/logo.jpg" alt=""></a>
-            </div>
-            <div class="search">
-                <input name="" type="text" placeholder="请输入路线名称" class="search_input" autocomplete="off"
-                       v-model="rname">
-                <a :href="'route_list.html?cid=' + cid + '&currentPage=' + currentPage + '&totalPage=' + totalPage + '&rname=' + rname"
-                   class="search-button">搜索</a>
-            </div>
-            <div class="hottel">
-                <div class="hot_pic">
-                    <img src="images/hot_tel.jpg" alt="">
+        <div class="header_wrap">
+            <div class="topbar">
+                <div class="logo">
+                    <a href="/"><img src="images/logo.jpg" alt=""></a>
                 </div>
-                <div class="hot_tel">
-                    <p class="hot_time">客服热线(9:00-6:00)</p>
-                    <p class="hot_num">400-618-9090</p>
+                <div class="search">
+                    <input name="" type="text" placeholder="请输入路线名称" class="search_input" autocomplete="off"
+                           v-model="rname">
+                    <a :href="'route_list.html?cid=' + cid + '&currentPage=' + currentPage + '&totalPage=' + totalPage + '&rname=' + rname"
+                       class="search-button">搜索</a>
+                </div>
+                <div class="hottel">
+                    <div class="hot_pic">
+                        <img src="images/hot_tel.jpg" alt="">
+                    </div>
+                    <div class="hot_tel">
+                        <p class="hot_time">客服热线(9:00-6:00)</p>
+                        <p class="hot_num">400-618-9090</p>
+                    </div>
                 </div>
             </div>
         </div>
