--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -17,32 +17,7 @@
     <!--导入angularJS文件-->
     <!--找不到文件-->
     <!--<script src="js/angular.min.js"></script>-->
-    <!--导入jquery-->
-    <script src="js/jquery-3.3.1.js"></script>
-    <script>
-        $(function () {
-            $("#loginForm").submit(function () {
-                $.post(
-                    "user/login",
-                    {
-                        username: $("#username").val(),
-                        password: $("#password").val(),
-                        check: $("#check").val(),
-                        auto_login: $("#auto_login")[0].checked
-                    },
-                    function f(data) {
-                        if (data.flag) {
-                            location.href = "index.html";
-                        } else {
-                            alert(data.errorMsg)
-                            $("#errorMsg").html(data.errorMsg);
-                        }
-                    }
-                )
-                return false;
-            });
-        })
-    </script>
+
 </head>
 
 <body>
@@ -61,25 +36,21 @@
         <div class="login_inner">
 
             <!--登录错误提示消息-->
-            <div id="errorMsg" class="alert alert-danger"></div>
+            <div class="alert alert-danger">{{errorMsg}}</div>
             <form id="loginForm" action="user/login" method="post" accept-charset="utf-8">
                 <input type="hidden" name="action" value="login"/>
-                <input id="username" name="username" type="text" placeholder="请输入账号" autocomplete="off">
-                <input id="password" name="password" type="text" placeholder="请输入密码" autocomplete="off">
+                <input v-model="username" type="text" placeholder="请输入账号"
+                       autocomplete="off">
+                <input v-model="password" type="text" placeholder="请输入密码"
+                       autocomplete="off">
                 <div class="verify">
-                    <input id="check" name="check" type="text" placeholder="请输入验证码" autocomplete="off">
+                    <input v-model="check" type="text" placeholder="请输入验证码" autocomplete="off">
                     <span><img src="checkCode" alt="" onclick="changeCheckCode(this)"></span>
-                    <script type="text/javascript">
-                        //图片点击事件
-                        function changeCheckCode(img) {
-                            img.src = "checkCode?" + new Date().getTime();
-                        }
-                    </script>
                 </div>
                 <div class="submit_btn" style="align-self: center">
-                    <!--<button type="button">登录</button>-->
-                    <input type="submit"
-                           style="height: 35px;width: 200px; align-self: center ;background-color: #ffc900;" value="登录">
+                    <button type="button" @click="join">登录</button>
+                    <!--<input type="submit"-->
+                    <!--style="height: 35px;width: 200px; align-self: center ;background-color: #ffc900;" value="登录">-->
                     <div class="auto_login">
                         <input type="checkbox" id="auto_login" name="auto_login" class="checkbox">
                         <span>自动登录</span>
@@ -92,14 +63,76 @@
 </section>
 <!--引入尾部-->
 <div id="footer"></div>
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="js/jquery-1.11.0.min.js"></script>
+<!--&lt;!&ndash; jQuery (necessary for Bootstrap's JavaScript plugins) &ndash;&gt;-->
+<!--<script src="js/jquery-1.11.0.min.js"></script>-->
 <!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="js/jquery-3.3.1.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <!--导入布局js，共享header和footer-->
 <script type="text/javascript" src="js/include.js"></script>
+<!--导入jquery-->
+<script src="js/vue.js"></script>
+<script src="js/axios.js"></script>
 
+<script>
+    //图片点击事件
+    function changeCheckCode(img) {
+        img.src = "checkCode?" + new Date().getTime();
+    }
 
+    // $(function () {
+    //     $("#loginForm").submit(function () {
+    //         $.post(
+    //             "user/login",
+    //             {
+    //                 username: $("#username").val(),
+    //                 password: $("#password").val(),
+    //                 check: $("#check").val(),
+    //                 auto_login: $("#auto_login")[0].checked
+    //             },
+    //             function f(data) {
+    //                 if (data.flag) {
+    //                     location.href = "index.html";
+    //                 } else {
+    //                     alert(data.errorMsg)
+    //                     $("#errorMsg").html(data.errorMsg);
+    //                 }
+    //             }
+    //         )
+    //         return false;
+    //     });
+    // })
+
+    var loginVm = new Vue({
+        el: "#login_wrap",
+        data: {
+            username: '',
+            password: '',
+            check: '',
+            errorMsg: ''
+        },
+        methods: {
+            join() {
+                var params = new URLSearchParams();
+                params.append('username', this.username);
+                params.append('password', this.password);
+                params.append('check', this.check);
+                params.append('auto_login', 'true');
+                var _this = this;
+                axios.post("user/login",params).then(function (value) {
+                    if (value.data.flag) {
+                        location.href = "index.html";
+                    } else {
+                        alert(value.data.errorMsg)
+                        _this.errorMsg = value.data.errorMsg;
+                    }
+                }).catch(function (reason) {
+                    console.log(reason)
+                })
+            }
+        }
+    })
+</script>
 </body>
 
 </html>
