--- a/src/main/webapp/route_detail.html
+++ b/src/main/webapp/route_detail.html
@@ -122,7 +122,7 @@
 </div>
 <!-- 详情 end -->
 
-<!--引入头部-->
+<!--引入尾部-->
 <div id="footer"></div>
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="js/jquery-3.3.1.js"></script>
